--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-annotated-types==0.6.0
+annotated-types
 anyio==3.7.1
 certifi==2023.7.22
 charset-normalizer==3.3.0
@@ -17,4 +17,4 @@ sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.8.0
 urllib3==2.0.6
-uvicorn==0.23.2
+uvicorn==0.23.2 
