--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,6 @@ pydantic_core==2.10.1
 requests==2.31.0
 sniffio==1.3.0
 starlette==0.27.0
-typing_extensions==4.8.0
-urllib3==2.0.6
-uvicorn==0.23.2 
+typing_extensions
+urllib3
+uvicorn
